Added favorites feature
